# cli-toolkit

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  config.yaml  main.py  pyproject.toml
app/cli/: abstract.py  commands.py  menu.py
app/config/: loader.py
app/exceptions/: __init__.py  base.py
app/files/: __init__.py  abstract.py  readers.py  selectors.py  writers.py
app/logging/: __init__.py  _constants.py  logger.py
app/paths/: __init__.py  _paths.py  base.py
app/utils/: __init__.py  _constants.py  progress.py
tests/: conftest.py  test_config.py  test_exceptions.py  test_paths.py  test_readers.py  test_selectors.py  test_writers.py
