[project]
name = "cli-toolkit"
version = "0.1.0"
description = "Python CLI starter kit – ready-to-use base for internal automation tools."
authors = [
    { name = "Shoxrux Yuldashov", email = "deagleshox@mail.ru" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "inquirer (>=3.4.1,<4.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "colorama (>=0.4.6,<0.5.0)",
    "tqdm (>=4.68.2,<5.0.0)",
    "pandas (>=3.0.3,<4.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)"
]

[dependency-groups]
dev = [
    "isort (>=8.0.1,<9.0.0)",
    "black (>=26.5.1,<27.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "flake8-pyproject (>=1.2.4,<2.0.0)",
    "commitizen (>=4.16.3,<5.0.0)",
    "pre-commit (>=4.6.0,<5.0.0)",
    "pytest (>=9.1.0,<10.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | __pycache__
  | \.pytest_cache
  | \.vscode
  | \.idea
  | venv
  | env
  | \.venv
  | \.env
)/
'''

[tool.isort]
profile = "black"
line_length = 79
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
known_first_party = ["app", "tests"]

[tool.flake8]
max-line-length = 79
max-complexity = 10
count = true
per-file-ignores = [
    "__init__.py:F401,F403",
]
extend-ignore = [
    "E203",
    "E231",
    "E241",
    "W503",
    "F811",
    "R503",
    "R504",
    "R505"
]
exclude = [
    ".git/",
    "__pycache__/",
    "env/",
    "venv/",
    ".env/",
    ".venv/",
    ".pytest_cache",
    ".vscode/",
    ".idea/"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html",
    "-v",
]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
disallow_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
# strict = true

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "v$version"
version_files = ["pyproject.toml:^version"]
update_changelog_on_bump = true
